-
Bug
-
Resolution: Done
-
P2: Important
-
5.7.0
-
None
-
Build tool: Qt Creator 4.0.2
Running on Android 5.0.1
-
3553f1dc9fb0f43564bddfe453a1d7843c43cffd
When I add Combobox into Modal Dialog (from QtQuick.Dialogs 1.2), it doesn't show list of values on Android and I cant select anything. This error happens only in ComboBox from Controls 2, if I use Combobox from Controls 1.4 or early everithing is ok.
My code is here https://github.com/aknew/CoinsVariationBase/blob/75743df118d6d7e6c0325dcdefea1385f0c3e389/src/CBControls/FilterDialog.qml
For Gerrit Dashboard: QTBUG-55004 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
167511,2 | Fix popups to appear above QtQuick.Dialogs 1.x | 5.7 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |